==> Embedfire-gps/ebf_module_gps_beidou_atgm332d/2-开发板配套例程/H743_Pro开发板/2.GPS_Decode_LCD/User/gps/gps_config.c <==
#include "gps_config.h"
#include "./led/bsp_led.h"

static void GPS_USART_Config(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;

    RCC_PeriphCLKInitTypeDef RCC_PeriphClkInit;
        
    GPS_USART_RX_GPIO_CLK_ENABLE();
    GPS_USART_TX_GPIO_CLK_ENABLE();
    
    /* 配置串口3时钟源*/
		RCC_PeriphClkInit.PeriphClockSelection = RCC_PERIPHCLK_USART3;
		RCC_PeriphClkInit.Usart16ClockSelection = RCC_USART234578CLKSOURCE_PLL2;
		HAL_RCCEx_PeriphCLKConfig(&RCC_PeriphClkInit);
    /* 使能串口3时钟 */
    GPS_USART_CLK_ENABLE();

    /* 配置Tx引脚为复用功能  */
    GPIO_InitStruct.Pin = GPS_USART_TX_PIN;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_PULLUP;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
    GPIO_InitStruct.Alternate = GPS_USART_TX_AF;
    HAL_GPIO_Init(GPS_USART_TX_GPIO_PORT, &GPIO_InitStruct);
    
    /* 配置Rx引脚为复用功能 */
    GPIO_InitStruct.Pin = GPS_USART_RX_PIN;
    GPIO_InitStruct.Alternate = GPS_USART_RX_AF;
    HAL_GPIO_Init(GPS_USART_RX_GPIO_PORT, &GPIO_InitStruct); 
    
    /* 配置串口GPS_USART 模式 */
    GPS_UartHandle.Instance = GPS_USART;
    GPS_UartHandle.Init.BaudRate = 9600;
    GPS_UartHandle.Init.WordLength = UART_WORDLENGTH_8B;
    GPS_UartHandle.Init.StopBits = UART_STOPBITS_1;
    GPS_UartHandle.Init.Parity = UART_PARITY_NONE;
    GPS_UartHandle.Init.Mode = UART_MODE_TX_RX;
    GPS_UartHandle.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    GPS_UartHandle.Init.OverSampling = UART_OVERSAMPLING_16;
    GPS_UartHandle.Init.OneBitSampling = UART_ONEBIT_SAMPLING_DISABLED;
    GPS_UartHandle.AdvancedInit.AdvFeatureInit = UART_ADVFEATURE_NO_INIT;
    HAL_UART_Init(&GPS_UartHandle);
}

static void GPS_DMA_Config(void)
{
  /*开启DMA时钟*/
  GPS_USART_DMA_CLK_ENABLE();
  
  DMA_Handle.Instance = GPS_USART_DMA_STREAM;
  /* Deinitialize the stream for new transfer */
  //HAL_DMA_DeInit(&DMA_Handle);
  /*usart3 rx对应dma2，通道4，数据流7*/	
  DMA_Handle.Init.Request = DMA_REQUEST_USART3_RX; 
  /*方向：从外设到内存*/		
  DMA_Handle.Init.Direction= DMA_PERIPH_TO_MEMORY;	
  /*外设地址不增*/	    
  DMA_Handle.Init.PeriphInc = DMA_PINC_DISABLE; 
  /*内存地址自增*/
  DMA_Handle.Init.MemInc = DMA_MINC_ENABLE;	
  /*外设数据单位*/	
  DMA_Handle.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
  /*内存数据单位 8bit*/
  DMA_Handle.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;	
  /*DMA模式：不断循环*/
  DMA_Handle.Init.Mode = DMA_CIRCULAR;	 
  /*优先级：中*/	
  DMA_Handle.Init.Priority = DMA_PRIORITY_MEDIUM;      
  /*禁用FIFO*/
  DMA_Handle.Init.FIFOMode = DMA_FIFOMODE_DISABLE;        
  DMA_Handle.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;    
  /*存储器突发传输 16个节拍*/
  DMA_Handle.Init.MemBurst = DMA_MBURST_SINGLE;    
  /*外设突发传输 1个节拍*/
  DMA_Handle.Init.PeriphBurst = DMA_PBURST_SINGLE;    
  /*配置DMA2的数据流7*/		   
  HAL_DMA_Init(&DMA_Handle); 
  /* Associate the DMA handle */
  __HAL_LINKDMA(&GPS_UartHandle, hdmarx, DMA_Handle);
	/*配置GPS使用的DMA中断优先级*/
	HAL_NVIC_SetPriority(GPS_DMA_IRQ, 0, 0);
	 /*使能DMA中断*/
	HAL_NVIC_EnableIRQ(GPS_DMA_IRQ);
	 /*配置中断条件*/
	__HAL_DMA_ENABLE_IT(&DMA_Handle,GPS_DMA_IT_TC|GPS_DMA_IT_HT);

}
